--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,12 @@ mk_info.h
 *.dpkg
 *.pc
 *.lo
+tags
+*.log
+logs/*
+callgrind.out.*
+tests/lib/bin/*
+plugins.conf
+plugins.list
+plugins/Make.common
+plugins/auth/mk_passwd
